--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,14 @@
 {% endblock %}
 
 {% block content %}
+    <div class="content">
+        <h4>Welcome to the Team Codemaxxing Tech Share</h4>
+        <p>Click on the links above to view the different search implementations</p>
+        <ul>
+            <li><a href="/basic">Basic Search</a> is a very basic implementation using sql ILIKE and similar features</li>
+            <li><a href="/algolia">Algolia Search</a> is a more advanced search implementation using Algolia</li>
+            <li><a href="/resources">Resources</a> is a page that lists resources that can be used to learn more about search</li>
+        </ul>
+    </div>
     
 {% endblock %}
