--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -34,6 +34,14 @@
                     Home
                 </a>
 
+                <a class="navbar-item" href="/basic">
+                    Basic Search
+                </a>
+
+                <a class="navbar-item" href="/algolia">
+                    Algolia Search
+                </a>
+
                 <a class="navbar-item">
                     Resources
                 </a>
