--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block content %}
+<section class="section">
     <div class="content">
-        <h4>Welcome to the Team Codemaxxing Tech Share</h4>
+        <h1>Welcome to the Team Codemaxxing Tech Share</h1>
         <p>Click on the links above to view the different search implementations</p>
         <ul>
             <li><a href="/basic">Basic Search</a> is a very basic implementation using sql ILIKE and similar features</li>
@@ -14,5 +15,6 @@
             <li><a href="/resources">Resources</a> is a page that lists resources that can be used to learn more about search</li>
         </ul>
     </div>
+</section>
     
 {% endblock %}
