--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -13,10 +13,10 @@
 <body>
 
     <!-- Nav -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <p class="title is-4">Algolia Tech Share</p>
+                <p class="has-text-weight-bold">Algolia Tech Share</p>
             </a>
 
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -42,12 +42,13 @@
                     Algolia Search
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="/resources">
                     Resources
                 </a>
             </div>
 
             <div class="navbar-end">
+                
             </div>
         </div>
     </nav>
