--- a/templates/algolia_search.html
+++ b/templates/algolia_search.html
@@ -11,52 +11,88 @@
 {% endblock %}
 
 {% block content %}
-<!-- Main container -->
 <nav class="level mt-4 ">
-    <!-- Left side -->
-    <div class="level-left">
-        <div class="level-item">
-            <div id="searchbox" class="searchbox"></div>
-        </div>
+    <div class="level-item">
+        <!-- SEARCH BOX -->
+        <div id="searchbox" class="searchbox"></div>
     </div>
 
-    <!-- Right side -->
-    <div class="level-right">
         <div class="level-item">
-            <button class="" onclick="showfilter()">
-                <i class="fa-solid fa-filter"></i> Filter
-            </button>
-            <div class="filter" hidden>
-                <h4>Sport</h4>
-                <div id="filterSport" class="filter-container"></div>
-                <h4>Difficulty</h4>
-                <div id="filterDifficulty" class="filter-container"></div>
+
+            <div class="dropdown">
+                <div class="dropdown-trigger">
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2" onclick="toggleFilter(this)">
+                        <span class="icon is-small">
+                            <i class="fa-solid fa-filter" aria-hidden="true"></i>
+                        </span>
+                        <span>Filter</span>
+                    </button>
+                </div>
+                
+                <div class="dropdown-menu" id="dropdown-menu2" role="menu">
+                    <div class="dropdown-content p-4">
+                        <!-- FILTERS -->
+                        <h4>Sport</h4>
+                        <div id="filterSport" class="filter-container"></div>
+                        <br>
+                        <h4>Difficulty</h4>
+                        <div id="filterDifficulty" class="filter-container"></div>
+                    </div>
+                </div>
             </div>
+
         </div>
+
         <div class="level-item">
-            <button class="" onclick="showsort()">
-                <i class="fa-solid fa-sort"></i> Sort
-            </button>
-            <div class="sort" hidden>
-                <div id="sortContainer" class="sort-container"></div>
+
+            <div class="dropdown">
+                <div class="dropdown-trigger">
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2" onclick="toggleSort(this)">
+                        <span class="icon is-small">
+                            <i class="fa-solid fa-sort"></i>
+                        </span>
+                        <span>Sort</span>
+                    </button>
+                </div>
+                
+                <div class="dropdown-menu" id="dropdown-menu2" role="menu">
+                    <div class="dropdown-content p-4">
+                        <!-- SORT -->
+                        <div id="sortContainer" class="sort-container"></div>
+                    </div>
+                </div>
             </div>
+
         </div>
-    </div>
+
 </nav>
 
 <div class="container m-4">
+    <!-- HITS (RESULTS) -->
     <div id="hits"></div>
+
+    <!-- PAGINATION -->
     <div id="pagination"></div>
 </div>
 
 <script>
-    function showfilter() {
-        document.querySelector('.filter').hidden = !document.querySelector('.filter').hidden
-        document.querySelector('.sort').hidden = true
+
+    function toggleFilter(el) {
+        const element = el.closest('.dropdown');
+        if (element.classList.contains('is-active')) {
+            element.classList.remove('is-active');
+        } else {
+            element.classList.add('is-active');
+        }
     }
-    function showsort() {
-        document.querySelector('.sort').hidden = !document.querySelector('.sort').hidden
-        document.querySelector('.filter').hidden = true
+
+    function toggleSort(el) {
+        const element = el.closest('.dropdown');
+        if (element.classList.contains('is-active')) {
+            element.classList.remove('is-active');
+        } else {
+            element.classList.add('is-active');
+        }
     }
 
     {% raw %}
@@ -84,7 +120,7 @@
         }),
         instantsearch.widgets.refinementList({
             container: '#filterDifficulty',
-            attribute: 'leveldiff',
+            attribute: 'difficulty',
             limit: 5,
         }),
     ]);
@@ -94,12 +130,8 @@
         instantsearch.widgets.sortBy({
             container: '#sortContainer',
             items: [
-                { label: 'Alphabetical', value: 'Project1_alph' },
-                { label: 'Reverse Alphabetical', value: 'Project1_alph_reverse' },
-                { label: 'Newest', value: 'Project1' },
-                { label: 'Oldest', value: 'Project1_date_asc' },
-                { label: 'Most Upvoted', value: 'Project1_upvotes_desc' },
-                { label: 'Least Upvoted', value: 'Project1_upvotes_asc' },
+                { label: 'Newest', value: 'Workouts' },
+                { label: 'Oldest', value: 'Workouts_date_asc' },
             ],
         })
     );
@@ -110,17 +142,17 @@
 
         const container = widgetParams.container;
         if (hits.length === 0) {
-            container.innerHTML = '<div class=""><div class="">No results found</div></div>';
+            container.innerHTML = '<div>No results found</div>';
         } else {
             container.innerHTML = `
             <div class="custom-hits">
                 ${hits.map(hit => `
-                    <div class="">
+                    <div>
                         <div id="${hit.objectID}" class="card m-4 p-4">
                             <div class="title">${instantsearch.highlight({ attribute: 'title', hit })}</div>
                             <div class="subtitle">${instantsearch.highlight({ attribute: 'details', hit })}</div>
                             <div class="created-at">${hit.created_at}</div>
-                            <div class="levelDiff">${hit.difficulty} Level</div>
+                            <div class="difficulty">${hit.difficulty} Level</div>
                             <div class="sport">
                                 ${hit.sport}
                                 ${hit.sport === 'Swimming' ? '<i class="fa-solid fa-person-swimming"></i>' : ''}
@@ -157,7 +189,7 @@
 
     search.addWidget(
         instantsearch.widgets.configure({
-            hitsPerPage: 9,
+            hitsPerPage: 5,
             query: '', // default so that there are some initial results on the first load
         })
     );
