--- a/templates/resources.html
+++ b/templates/resources.html
@@ -14,7 +14,12 @@
     <p class="subtitle">Here are some resources to help you get started with Algolia.</p>
     <div class="content">
         <ul>
-            <li><p>TODO</p></li>
+            <li><p><a href="https://www.algolia.com/">Algolia Website</a></p></li>
+            <li><p><a href="https://www.algolia.com/doc/api-reference/widgets/js/">Instantsearch.js API Reference</a></p></li>
+            <li><p><a href="https://www.algolia.com/doc/guides/building-search-ui/widgets/showcase/js/">Widgets Showcase</a></p></li>
+            <li><p><a href="https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/js/">Customize an Existing Widget</a></p></li>
+            <li><p><a href="https://www.algolia.com/doc/guides/building-search-ui/widgets/create-your-own-widgets/js/">Create Your Own Widget</a></p></li>
+            <li><p><a href="https://www.algolia.com/doc/libraries/python/v4/">Python API Reference</a></p></li>
         </ul>
     </div>
 </section>
